@@ -39,13 +39,16 @@ namespace libtorrent {
 
 #ifndef TORRENT_DISABLE_MUTABLE_TORRENTS
 resolve_links::resolve_links(std::shared_ptr<torrent_info> ti)
-	: m_torrent_file(ti)
+	: m_torrent_file(std::move(ti))
 {
-	TORRENT_ASSERT(ti);
+	TORRENT_ASSERT(m_torrent_file);
 
-	int piece_size = ti->piece_length();
+	int const piece_size = m_torrent_file->piece_length();
 
-	file_storage const& fs = ti->files();
+	bool const v1 = m_torrent_file->v1();
+	bool const v2 = m_torrent_file->v2();
+
+	file_storage const& fs = m_torrent_file->files();
 	m_file_sizes.reserve(aux::numeric_cast<std::size_t>(fs.num_files()));
 	for (auto const i : fs.file_range())
 	{
@@ -55,7 +58,11 @@ resolve_links::resolve_links(std::shared_ptr<torrent_info> ti)
 		if (fs.pad_file_at(i)) continue;
 		if ((fs.file_offset(i) % piece_size) != 0) continue;
 
-		m_file_sizes.insert(std::make_pair(fs.file_size(i), i));
+		if (v1)
+			m_file_sizes.insert({fs.file_size(i), i});
+
+		if (v2)
+			m_file_roots.insert({fs.root(i), i});
 	}
 
 	m_links.resize(m_torrent_file->num_files());
@@ -66,10 +73,24 @@ void resolve_links::match(std::shared_ptr<const torrent_info> const& ti
 {
 	if (!ti) return;
 
+	if (m_torrent_file->v2() && ti->v2())
+	{
+		match_v2(ti, save_path);
+	}
+
+	if (m_torrent_file->v1() && ti->v1())
+	{
+		match_v1(ti, save_path);
+	}
+}
+
+void resolve_links::match_v1(std::shared_ptr<const torrent_info> const& ti
+	, std::string const& save_path)
+{
 	// only torrents with the same piece size
 	if (ti->piece_length() != m_torrent_file->piece_length()) return;
 
-	int piece_size = ti->piece_length();
+	int const piece_size = ti->piece_length();
 
 	file_storage const& fs = ti->files();
 	for (auto const i : fs.file_range())
@@ -87,12 +108,13 @@ void resolve_links::match(std::shared_ptr<const torrent_info> const& ti
 		auto const range = m_file_sizes.equal_range(file_size);
 		for (auto iter = range.first; iter != range.second; ++iter)
 		{
-			TORRENT_ASSERT(iter->second >= file_index_t(0));
-			TORRENT_ASSERT(iter->second < m_torrent_file->files().end_file());
+			auto const idx = iter->second;
+			TORRENT_ASSERT(idx >= file_index_t(0));
+			TORRENT_ASSERT(idx < m_torrent_file->files().end_file());
 
 			// if we already have found a duplicate for this file, no need
 			// to keep looking
-			if (m_links[iter->second].ti) continue;
+			if (m_links[idx].ti) continue;
 
 			// files are aligned and have the same size, now start comparing
 			// piece hashes, to see if the files are identical
@@ -101,9 +123,9 @@ void resolve_links::match(std::shared_ptr<const torrent_info> const& ti
 			piece_index_t their_piece = fs.map_file(i, 0, 0).piece;
 			// the pieces of "this" file (from m_torrent_file)
 			piece_index_t our_piece = m_torrent_file->files().map_file(
-				iter->second, 0, 0).piece;
+				idx, 0, 0).piece;
 
-			int num_pieces = int((file_size + piece_size - 1) / piece_size);
+			int const num_pieces = int((file_size + piece_size - 1) / piece_size);
 
 			bool match = true;
 			for (int p = 0; p < num_pieces; ++p, ++their_piece, ++our_piece)
@@ -117,9 +139,9 @@ void resolve_links::match(std::shared_ptr<const torrent_info> const& ti
 			}
 			if (!match) continue;
 
-			m_links[iter->second].ti = ti;
-			m_links[iter->second].save_path = save_path;
-			m_links[iter->second].file_idx = i;
+			m_links[idx].ti = ti;
+			m_links[idx].save_path = save_path;
+			m_links[idx].file_idx = i;
 
 			// since we have a duplicate for this file, we may as well remove
 			// it from the file-size map, so we won't find it again.
@@ -127,8 +149,40 @@ void resolve_links::match(std::shared_ptr<const torrent_info> const& ti
 			break;
 		}
 	}
-
 }
+
+void resolve_links::match_v2(std::shared_ptr<const torrent_info> const& ti
+	, std::string const& save_path)
+{
+	file_storage const& fs = ti->files();
+	for (auto const i : fs.file_range())
+	{
+		// for every file in the other torrent, see if we have one that match
+		// it in m_torrent_file
+		if (fs.pad_file_at(i)) continue;
+
+		auto const iter = m_file_roots.find(fs.root(i));
+		if (iter == m_file_roots.end()) continue;
+
+		auto const idx = iter->second;
+
+		TORRENT_ASSERT(idx >= file_index_t(0));
+		TORRENT_ASSERT(idx < m_torrent_file->files().end_file());
+
+		// if we already have found a duplicate for this file, no need
+		// to keep looking
+		if (m_links[idx].ti) continue;
+
+		m_links[idx].ti = ti;
+		m_links[idx].save_path = save_path;
+		m_links[idx].file_idx = i;
+
+		// since we have a duplicate for this file, we may as well remove
+		// it from the file-size map, so we won't find it again.
+		m_file_roots.erase(iter);
+	}
+}
+
 #endif // TORRENT_DISABLE_MUTABLE_TORRENTS
 
 } // namespace libtorrent
